--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,83 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-image: url(./assets/shape.png);
+  background-color: #4880FF;
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+.login-container {
+  background-color: white;
+  padding: 40px 40px;
+  border-radius: 24px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 350px;
+}
+.login-container h2 {
+  margin-bottom: 20px;
+}
+.login-container input[type="email"],
+.login-container input[type="password"] {
+  background-color: #f0f0f0;
+  width: 100%;
+  padding: 10px 0px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 18px;
+  font-family: "Nunito Sans", sans-serif;
+}
+.login-container input[type="checkbox"] {
+  margin-right: 10px;
+  
+}
+.login-container button {
+  width: 100%;
+  padding: 10px;
+  background-color:#4880FF;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
+.login-container button:hover {
+  background-color: #357ABD;
+}
+.login-container a {
+  color: #202224;
+  text-decoration: none;
+}
+.login-container a:hover {
+  color: #5a8cff;
+  text-decoration: underline;
+}
+
+.login-title {
+  text-align: center;
+  font-size: 32px;
+  font-family: "Nunito Sans", sans-serif;
+}
+
+.login-text {
+  font-size: 14px;
+  font-family: "Nunito Sans", sans-serif;
+}
+
+.login-intro {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+input::placeholder {
+  padding-left: 10px;
+  font-size: 14px;
+  font-family: "Nunito Sans", sans-serif;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+label {
+  font-size: 14px;
+  font-family: "Nunito Sans", sans-serif;
 }
