--- a/src/app/styles/StylesLogin.css
+++ b/src/app/styles/StylesLogin.css
@@ -1,21 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-image: url(./assets/shape.png);
-  background-color: #4880FF;
-  margin: 0;
-  font-family: "Nunito Sans", sans-serif;
-}
-
 .login-container {
   display: flex;
   align-items: center;
@@ -47,7 +29,6 @@ body {
 
 .login-p {
   font-size: 14px;
-  font-weight: 600;
   color: #202224;
 }
 
@@ -56,7 +37,6 @@ body {
   align-items: start;
   padding: 0px 6px;
   align-items: center;
-  text-align: center;
   margin: 0px 0px 25px 0px;
 }
 
@@ -84,19 +64,17 @@ body {
 }
 
 .login-container a:hover {
-  color: #5a8cff;
+  color: #5A8CFF;
 }
 
 .login-text {
   font-size: 14px;
-  text-align: center;
   margin: 5px;
 }
 
 .login-forms {
   display: flex;
   margin-top: 20px;
-  padding: 0px 0px;
   flex-wrap: wrap;
   justify-content: space-between;
 }
